<resources>
    <string name="app_name">Namami</string>
    <string name="cng_marathi">Marathi</string>
    <string name="title_activity_dashboard" translatable="false">Dashboard</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="str_poojas" translatable="false">POOJAS</string>
    <string name="str_aarathi" translatable="false">AARATHI</string>
    <string name="str_stotrams" translatable="false">STOTRAMS</string>
    <string name="str_stotram_dattatreya">Dattatreya kashta nashak stotram</string>
    <string name="str_stotram_ganpati_athravshisha">Ganpati athravshisha stotram</string>
    <string name="str_stotram_ganpati_sukta">Ganpati sukta stotram</string>
    <string name="str_stotram_mahalakshmi_ashtakam">Mahalakshmi ashtakam stotram</string>
    <string name="str_stotram_maruti">Maruti stotram</string>
    <string name="str_stotram_navgraha">Navgraha stotram</string>
    <string name="str_stotram_purusha_sukta">Purusha sukta stotram</string>
    <string name="str_stotram_ramaraksha">Ramaraksha stotram</string>
    <string name="str_stotram_rudra_adhyay">Rudraadhyay stotram</string>
    <string name="str_stotram_sankatnashan_ganesh">Sankatnashan ganesh stotram</string>
    <string name="str_stotram_shani">Shani stotram</string>
    <string name="str_stotram_shri">Shri stotram</string>
    <string name="str_stotram_sour">Sour stotram</string>
    <string name="str_txt_ganesh_aarathi">Ganesh Aarati</string>
    <string name="str_txt_datta_aarathi">Datta Aarati</string>
    <string name="str_txt_durga_devi_aarathi">Durga Devi Aarati</string>
    <string name="str_txt_mangala_gauri_aarathi">Mangala Gauri Aarati</string>
    <string name="str_txt_satyanarayan_aarathi">Satyanarayan Dev Aarati</string>
    <string name="str_txt_shankar_aarathi">Shankar Aarati</string>
    <string name="str_txt_maruti_aarathi">Shree Maruti Aarati</string>
    <string name="str_txt_shriram_aarathi">Shree Ram Aarati</string>
    <string name="str_txt_vitthal_aarathi">Vitthal Aarati</string>
    <string name="str_txt_ganesh_puja">Shree Parthiv Ganpati puja</string>
    <string name="str_txt_anant_puja">Anant puja</string>
    <string name="str_txt_griha_pravesha_puja">Griha pravesha puja</string>
    <string name="str_txt_jyesta_gauri_puja">Jyesta gauri puja</string>
    <string name="str_txt_kojagari_lakshmi_puja">Kojagari lakshmi puja</string>
    <string name="str_txt_shiva_puja">Shiva puja</string>
    <string name="str_txt_satyanarayan_puja">Shree Satyanarayan puja</string>
    <string name="str_txt_mangala_gauri">Mangalagauri puja</string>
    <string name="str_title_samagri" translatable="false">SAMAGRI</string>
    <string name="str_title_poojavidhi" translatable="false">POOJA VIDHI</string>
    <string name="title_detail_name" translatable="false">Title</string>
    <string name="title_detail" translatable="false">Description Aarathi</string>
    <string name="str_Title_Audio_ganesh" translatable="false">Ganesh Chaturthi</string>
    <string name="str_Title_Audio_maglagauri" translatable="false">ManglaGauri</string>
    <string name="str_Title_Audio_satyanarayan" translatable="false">Satyanarayan</string>
    <string name="str_title_ganesh_pujavidhi" translatable="false">।  श्री पार्थिव गणपती पूजाप्रारंभ: ।</string>
    <string name="str_tiltle_mangla_pujavidhi" translatable="false">मंगलागौरी पूजा</string>
    <string name="str_tiltle_satyanarayan_pujavidhi" translatable="false">श्री सत्यनारायण पूजा</string>
    <string name="str_pooja_detail_about_title" translatable="false">About</string>
    <string name="str_pooja_detail_tithi_title" translatable="false">Tithi</string>
    <string name="str_pooja_detail_duration_title" translatable="false">Duration</string>
    <string name="str_pooja_detail_benefits_title" translatable="false">Benefits of Pooja</string>
</resources>