<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.google.poojanam.Fragments.AarathiFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/LinMain_Aarathi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LinAaratiGanesh"
                android:padding="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgAaratiGanesh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ganesh" />

                <TextView
                    android:id="@+id/txtAaratiGanesh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="15dp"
                    android:text="@string/str_txt_ganesh_aarathi"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="normal" />



            </LinearLayout>

            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LinAaratidatta"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgAaratiDatta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/saibaba" />

                <TextView
                    android:id="@+id/txtAaratiDatta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="15dp"
                    android:text="@string/str_txt_datta_aarathi"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="normal" />



            </LinearLayout>

            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LinAaratiDurga"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgAaratiDurga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/durga" />

                <TextView
                    android:id="@+id/txtAaratiDurga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="15dp"
                    android:text="@string/str_txt_durga_devi_aarathi"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="normal" />



            </LinearLayout>

            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LinAaratiMangal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgAaratiMangal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/gauri_maatha" />

                <TextView
                    android:id="@+id/txtAaratiMangal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="15dp"
                    android:text="@string/str_txt_mangala_gauri_aarathi"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="normal" />



            </LinearLayout>

            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LinAaratiSatya"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgAaratiSatya"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/vishnu" />

                <TextView
                    android:id="@+id/txtAaratiSatya"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="15dp"
                    android:text="@string/str_txt_satyanarayan_aarathi"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="normal" />



            </LinearLayout>

            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LinAaratiShankar"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgAaratiShankar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/shiva" />

                <TextView
                    android:id="@+id/txtAaratiShankar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="15dp"
                    android:text="@string/str_txt_shankar_aarathi"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="normal" />



            </LinearLayout>

            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LinAaratiMaruti"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgAaratiMaruti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/hanuman" />

                <TextView
                    android:id="@+id/txtAaratiMaruti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="15dp"
                    android:text="@string/str_txt_maruti_aarathi"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="normal" />



            </LinearLayout>

            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LinAaratiRam"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgAaratiRam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/krishna" />

                <TextView
                    android:id="@+id/txtAaratiRam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="15dp"
                    android:text="@string/str_txt_shriram_aarathi"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LinAaratiVitthal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgAaratiVitthal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/shivling" />

                <TextView
                    android:id="@+id/txtAaratiVitthal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="15dp"
                    android:text="@string/str_txt_vitthal_aarathi"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="normal" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
