<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.google.poojanam.Pooja_Detail">

    <LinearLayout
        android:id="@+id/lin_poojas_back"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/imgPoojaDetailBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/arrow1"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/txtTitlePoojaDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text=""
            android:textColor="@color/colorWhite"
            android:layout_gravity="center"
            android:paddingLeft="15dp"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

                <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/help"/>

            <TextView
                android:id="@+id/txt_Title_detail_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_pooja_detail_about_title"
                android:layout_marginLeft="10dp"
                android:textSize="20dp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txtPoojaDetailAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18dp"
            android:textColor="@color/colorBlack"
            android:lineSpacingExtra="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgcalender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar"/>

            <TextView
                android:id="@+id/txt_Title_detail_tithi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_pooja_detail_tithi_title"
                android:layout_marginLeft="10dp"
                android:textSize="20dp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txtPoojaDetailTithi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18dp"
            android:textColor="@color/colorBlack"
            android:lineSpacingExtra="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/time"/>

            <TextView
                android:id="@+id/txt_Title_detail_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_pooja_detail_duration_title"
                android:layout_marginLeft="10dp"
                android:textSize="20dp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txtPoojaDetailDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18dp"
            android:textColor="@color/colorBlack"
            android:lineSpacingExtra="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/thumb_up"/>

            <TextView
                android:id="@+id/txt_Title_detail_benifits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_pooja_detail_benefits_title"
                android:layout_marginLeft="10dp"
                android:textSize="20dp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txtPoojaDetailBenefits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18dp"
            android:textColor="@color/colorBlack"
            android:lineSpacingExtra="5dp"/>


    </LinearLayout>

    </ScrollView>

</LinearLayout>
